--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "framer-motion": "^12.18.1",
+    "react-lottie": "^1.2.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
