--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "framer-motion": "^12.18.1",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
