--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^12.18.1",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "sonner": "^2.0.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
