--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "@types/react-lottie": "^1.2.10",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "framer-motion": "^12.18.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "sonner": "^2.0.5",
